added tracking esp sensors; new sensor.lux_aussen_pct; consider daylight for flux; light.michbaeck <> light.michbaeck_all; optimized light_michbaeck_1_target for winter; added disabled state to light_michbaeck_auto; new sensor.light_michbaeck_auto_state; sleepcycle improvements; new debugging automations; more notifications; fixed default alarm times; minor fixes

--- a/customize.yaml
+++ b/customize.yaml
@@ -113,7 +113,6 @@ input_select.michbaeck:
   friendly_name: Standort
   icon: mdi:map-marker-radius
 sensor.michbaeck:
-  friendly_name: Standort
   icon: mdi:map-marker-radius
 sensor.dir_of_travel:
   friendly_name: Richtung
@@ -164,3 +163,6 @@ switch.plant_michbaeck_2_water:
   icon: mdi:water-pump
 media_player.stereopaar:
   icon: mdi:speaker
+sensor.vpn_disconnects:
+  friendly_name: VPN today
+  unit_of_measurement: disconnects
